# monitoring-lab

./: .gitignore  Makefile  README.md  docker-compose.yml
apps/rust-weather-app/: Cargo.toml  Dockerfile
apps/rust-weather-app/src/: main.rs
apps/synthetic-monitoring/: Dockerfile  README.md  pyproject.toml
apps/synthetic-monitoring/tests/: test_apps.py
apps/vault-load-test/: Dockerfile  go.mod  go.sum  main.go
configurations/blackbox_exporter/: config.yml
configurations/grafana/provisioning/dashboards/: all.yml  example.json
configurations/grafana/provisioning/datasources/: influxdb.yml  prometheus.yml
configurations/influxdb/: Dockerfile
configurations/influxdb/scripts/: create_buckets.sh
configurations/postgres_exporter/: config.yml
configurations/prometheus/: prometheus.yml
configurations/telegraf/etc/: telegraf.conf
configurations/unleash/: feature_toggles.json
